# OOS_Praktikum

./: LICENSE
OOS_Praktikum_1/: .gitignore
OOS_Praktikum_1/OOS_Praktikum_1_CPP/: CMakeLists.txt  main.cpp
OOS_Praktikum_1/OOS_Praktikum_1_CPP/Shapes/: CMakeLists.txt  KreisAgg.cpp  KreisAgg.hpp  KreisVererb.hpp  Point.hpp  Rechteck.hpp  Shape.hpp  Shapes.hpp
OOS_Praktikum_1/OOS_Praktikum_1_Java/: .project
OOS_Praktikum_1/OOS_Praktikum_1_Java/src/OOS_Praktikum_1_Java/: KreisAgg.java  (+5 more)
OOS_Praktikum_2/OOS_Praktikum_2_CPP/: CMakeLists.txt
OOS_Praktikum_2/OOS_Praktikum_2_CPP/UserManagement/: CMakeLists.txt  benutzer.hpp  benutzerVerwaltung.hpp  benutzerVerwaltungAdmin.hpp
OOS_Praktikum_2/OOS_Praktikum_2_Java/: .gitignore  .project
OOS_Praktikum_2/OOS_Praktikum_2_Java/src/: Benutzer.java  BenutzerVerwaltung.java  BenutzerVerwaltungAdmin.java
OOS_Praktikum_3/OOS_Praktikum_3_CPP/: CMakeLists.txt  main.cpp
OOS_Praktikum_3/OOS_Praktikum_3_CPP/AnwendungsFrame/: CMakeLists.txt  anwendungsFrame.cpp  anwendungsFrame.hpp
OOS_Praktikum_3/OOS_Praktikum_3_CPP/LoginFrame/: CMakeLists.txt  loginFrame.cpp  loginFrame.hpp  loginFrame.ui
OOS_Praktikum_3/OOS_Praktikum_3_Java/: .project
OOS_Praktikum_3/OOS_Praktikum_3_Java/src/: AnmeldungsFrame.java  AnwendungsFrame.java  LoginFrame.java  OOS_Praktikum_3_Java.java
OOS_Praktikum_4/OOS_Praktikum_4_Java/: .project  db.s  lokalDB.s
OOS_Praktikum_4/OOS_Praktikum_4_Java/src/: OOS_Praktikum_4_Java.java
OOS_Praktikum_5/OOS_Praktikum_5_Java/: .project  remoteDB.s
OOS_Praktikum_5/OOS_Praktikum_5_Webservice/: .project
(+25 files in other folders)
